--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Svenska Bokmässan</title>
 
-		<meta name="viewport" content="width=device-width">
+		<!-- <meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="initial-scale=1.0"/>
 		<meta name="viewport" content="minimum-scale=1.0"/>
-		<meta name="viewport" content="maximum-scale=1.0"/>
+		<meta name="viewport" content="maximum-scale=1.0"/> -->
 		<meta name="mobile-web-app-capable" content="yes"/>
 
     <script src="libraries/p5.js" ></script>
