--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+		<link rel="manifest" href="/manifest.json">
     <title>Svenska Bokmässan</title>
-
-		<!-- <meta name="viewport" content="width=device-width">
-		<meta name="viewport" content="initial-scale=1.0"/>
-		<meta name="viewport" content="minimum-scale=1.0"/>
-		<meta name="viewport" content="maximum-scale=1.0"/> -->
 		<meta name="mobile-web-app-capable" content="yes"/>
-
     <script src="libraries/p5.js" ></script>
     <script src="libraries/p5.dom.js"></script>
     <script src="libraries/underscore.js"></script>
