--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="manifest" href="/manifest.json">
     <title>Svenska Bokmässan</title>
 		<meta name="mobile-web-app-capable" content="yes"/>
-    <script src="libraries/p5.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js" ></script>
     <script src="libraries/p5.dom.js"></script>
     <script src="libraries/underscore.js"></script>
     <script src="libraries/chai.js"></script>
